--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 
 	<h1>Funkce a události</h1>
 
+	<button onclick="zmenBarvu()"> Změň barvu čtverečku </button>
+
 	<div class="ctverecek">Čtvereček</div>
 
+	<button onclick="zobrazVysledek()">Zobraz výsledek</button>
 	<pre>Tady bude výsledek: <span id="vysledek"></span></pre>
 
 	<button onclick="upozorni()">
